# PyProject

./: .gitignore  README.md  cmd.py  pyproject.toml  pythonCode.md  requirements.txt  test.txt
AI/: main.py  pyproject.toml
AI/Qlib/: main.py
AI/lg/: Prompt_chaining.py  README.md  chatbot2.py  interrupt.py  interrupt2.py  prompt_chaining.py  router.py
AI/msQlib/: README.md  main.py  usdcnhsp.yaml
Demo/Test/: Test.py  Test2.py  Testified.py
Demo/classTest/: propertyTest.py
JupyterBook/: foo.csv  foo.xlsx  numpy_01.ipynb  pandas_01.ipynb  pandas_02.ipynb  tushare_01.ipynb
JupyterBook/.ipynb_checkpoints/: pandas_01-checkpoint.ipynb
JupyterBook/strategy/: plot_candle_tick.py
JupyterBook/talib_demo/: Talib_example.ipynb
LeetCode/: test.py
LeetCode/BS/: No29_两数相除.py  No33_旋转数组中查找值.py  No35_寻找插入的位置.py  No74_查找二位数组中的值.py  __init__.py
LeetCode/DFS/: No17_电话组合.py  No39_数的组合1.py  No40_数的组合2.py  No46_排列组合1.py  No47_排列组合2.py  No77_所有可能K个数的总和.py  No78_数组的所有子集.py  生产括号组合.py
LeetCode/DP/: No198_小偷.py  No322_组合零钱.py  No53_最大子序和.py  No62_路径.py
LeetCode/Top 100/: No2_两数相加.py
LeetCode/Two Pointer/: No11_存储最大水的容器.py  No15_三数之和.py  No26_统计有序数组中的无重复元素.py  No27_删除指定元素.py  No28_是否包含子串.py  No30_.py  No30_查找子串.py  No3_最大无重复子字符串.py  No3_最大重复子字符串.py  No42_存水.py  No75_排序颜色.py  No76_D子串的最小长度.py  No80_移除重复元素.py  No88_合并两个有序数组.py  __init__.py  存储最大水的容器.py
LeetCode/arry/: No121_买卖彩票的最佳收益.py  No122_买卖彩票的最佳收益2.py  No15_三数之和.py  No162_寻找峰值元素.py  No167_两数之和已排序.py  No169_找出数组中的众数.py  No1_两数之和.py  No41_找到缺失的第一个正整数.py  No53_最大子序和.py
LeetCode/math/: No168_Excel表头.py  No191_二进制1的个数.py  No7_翻转数字.py  No9_判断是不是回文数.py
LeetCode/sort/: BubbleSort.py  heapSort.py  insert2Sort.py  insertSort.py  maopao.py  mergeSort.py  selectSort.py  updatefig.py
LeetCode/stack/: No20_验证括号是否匹配.py
LeetCode/string/: 344_反转数组中的字符串.py  345_反转字符串中的元音字母.py  No125_判断回文字符.py  No13_罗马数字转整数.py  No91_.py  匹配括号.py
PkgTest/: asyncioDemo1.py  threadingDemo.py  threadingDemo2.py
Quant/: data_prepare.ipynb
Quant/bk/: demo.py
Quant/codebook_sample/: Analyze_FX_Pricing_Data.ipynb  Automating_Trendline_Feature_Generation.ipynb  MachineLearning_LSTM.ipynb  ts_arima_forecast.ipynb
Quant/lseg/: contact_csv.py  data_process.py
async_/: demo.py
auto_work/: README.md  pyproject.toml
citick/: click_screen.py  handle.py  handleTxt.py  log.txt  requirements.txt
common/: auto_save_baiducloud.py  has_down_load.py  pyqt_demo.py  pyqt_demo2.py  record.py  rename7z.py  save-1.txt  梦心月.txt  梦心玥.txt
cook_book/: README.md  pyproject.toml
cook_book/src/cook_book/: __init__.py
jupyter_book/: README.md  pyproject.toml
jupyter_book/src/: numpy_01.ipynb
jupyter_book/src/matplot/basic/: bar.ipynb  plot.ipynb
jupyter_book/src/sklearn/knn/: knn.ipynb
jupyter_book/src/strategy/: candlestick.ipynb
machine_learning/: README.md  pyproject.toml  stmd_01.ipynb
machine_learning/Basics/: buildmodel_tutorial.ipynb  quick_start.ipynb  transforms_tutorial.ipynb
machine_learning/Pytorch/: TCN_Model.ipynb  dataload_dataset.py  lstm.py  pytorch_lstm_ts.py  test_torch.py
machine_learning/Pytorch/Basics/: Tensor_张量.ipynb  autogradqs_tutorial.ipynb  nn_loss.ipynb  nn_module.ipynb  utils.ipynb  优化模型参数.ipynb  其他.ipynb  构建模型.ipynb
machine_learning/Pytorch/lstm/: data.py  lstm.py  prediction.py
machine_learning/Pytorch/trsfrm/: trsfrm.py
machine_learning/numpy_/: test.py
machine_learning/pytorch_/: TCN_Model.ipynb
machine_learning/pytorch_/Basics/: data_tutorial.ipynb
machine_learning/sklearn_/: Linear Regression Example.ipynb
quant/: __init__.py
quant/talib_use/: base_funtion.py
tools/: README.md  pyproject.toml
tools/src/data_process/: __init__.py  medical_data_process.py
web/: README.md  demo.py  demo2.py  pyproject.toml
web/src/fastapi/: __init__.py
创新项目/: MyApplication.spec  data.csv  form.ui  heatmap.py  hotmap.py  hotmap.spec  main.py  ui_form.py  ui_main.py  widget.py
(+15 files in other folders)
