[project]
name = "pyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain-anthropic>=0.3.9",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.8",
    "langsmith>=0.3.13",
    "py7zr>=0.22.0",
    "selenium>=4.29.0",
    "urllib3>=2.3.0",
]

[tool.uv.workspace]
members = ["AI", "web", "cook_book", "machine_learning", "auto_work", "tools", "jupyter_book"]
