[project]
name = "jupyter-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sututu", email = "sututu666@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
jupyter-book = "jupyter_book:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
